Bug 328220 - Emailadress as Link in my Signature
Summary: Emailadress as Link in my Signature
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-29 17:13 UTC by Martin Brugger
Modified: 2013-12-02 19:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Brugger 2013-11-29 17:13:19 UTC
I want do send Email with a html Signature that contents my Emailadress as a html Link. But that doesnt work. Every Email with my Signature will sent with my Emailadress as Text.

Is that impossible Or Normal?

Reproducible: Always
Comment 1 Laurent Montel 2013-11-29 17:43:24 UTC
if you send as text yes it's normal :)
Comment 2 Martin Brugger 2013-11-29 17:56:22 UTC
No I send in html.

In Kmail, in: Settings >>Configure Kmail >> Identities. When I select the default identity, or the identity I use for that email account, and select Modify, then I go over to the Signature tab. There  I have checked the "Use HTML" box at the bottom, then i put in with the basic editor a lInk. But it will always sent as Text.

In the Editor the Rich-Text Button is enabled too!

Please Help me!
Comment 3 Martin Brugger 2013-11-29 20:07:37 UTC
When I let Kmail automatical input of my Signature then is the Emailadresslink and the homepagelink and the line correct (as html) over taken in the email editor. All is OK.

Only when I make a Template with my %Signature without automatic Setting!  then is my Emailadresslink and the homepagelink and the line not as html over taken its only text.
Comment 4 Laurent Montel 2013-11-29 22:48:13 UTC
Ok now I see where is probably the problem.
Will investigate.
Comment 5 Laurent Montel 2013-12-02 06:17:12 UTC
Could you provide a screenshot
and a info about your identity ?
you can see file :
~/.kde/share/config/emailidentities

perhaps you can see me it in private.

I tested and it works fine here.
Comment 6 Laurent Montel 2013-12-02 19:49:09 UTC
Git commit f8564e3a7e3c804c44c5f3875cea77e7d554fa50 by Montel Laurent.
Committed on 02/12/2013 at 19:48.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 328220 - Emailadress as Link in my Signature

FIXED-IN: 4.12

M  +15   -9    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/f8564e3a7e3c804c44c5f3875cea77e7d554fa50