Fix Bug 328220 - Emailadress as Link in my Signature

FIXED-IN: 4.12
BUG: 328220